src/objects/pos_trans_tender__x.object
<CustomObject>
    <description>caesars$pos_trans_tender</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$pos_trans_tender</externalName>
    <fields>
        <fullName>c_admin_comp_cd__c</fullName>
        <description>c_admin_comp_cd</description>
        <externalDeveloperName>c_admin_comp_cd</externalDeveloperName>
        <label>c_admin_comp_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_file_prop_cd__c</fullName>
        <description>c_file_prop_cd</description>
        <externalDeveloperName>c_file_prop_cd</externalDeveloperName>
        <label>c_file_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <description>c_pos_rev_center_cd</description>
        <externalDeveloperName>c_pos_rev_center_cd</externalDeveloperName>
        <label>c_pos_rev_center_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_trans_id__c</fullName>
        <description>c_pos_trans_id</description>
        <externalDeveloperName>c_pos_trans_id</externalDeveloperName>
        <label>c_pos_trans_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_nbr__c</fullName>
        <description>c_room_nbr</description>
        <externalDeveloperName>c_room_nbr</externalDeveloperName>
        <label>c_room_nbr</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tender_type_desc__c</fullName>
        <description>c_tender_type_desc</description>
        <externalDeveloperName>c_tender_type_desc</externalDeveloperName>
        <label>c_tender_type_desc</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_trans_type_cd__c</fullName>
        <description>c_trans_type_cd</description>
        <externalDeveloperName>c_trans_type_cd</externalDeveloperName>
        <label>c_trans_type_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_dt__c</fullName>
        <description>d_pos_trans_dt</description>
        <externalDeveloperName>d_pos_trans_dt</externalDeveloperName>
        <label>d_pos_trans_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_end_time__c</fullName>
        <description>d_pos_trans_end_time</description>
        <externalDeveloperName>d_pos_trans_end_time</externalDeveloperName>
        <label>d_pos_trans_end_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_start_time__c</fullName>
        <description>d_pos_trans_start_time</description>
        <externalDeveloperName>d_pos_trans_start_time</externalDeveloperName>
        <label>d_pos_trans_start_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>f_tender_amt__c</fullName>
        <description>f_tender_amt</description>
        <externalDeveloperName>f_tender_amt</externalDeveloperName>
        <label>f_tender_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_check_nbr__c</fullName>
        <description>i_check_nbr</description>
        <externalDeveloperName>i_check_nbr</externalDeveloperName>
        <label>i_check_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_comp_number__c</fullName>
        <description>i_comp_number</description>
        <externalDeveloperName>i_comp_number</externalDeveloperName>
        <label>i_comp_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pos_tender_seq_id__c</fullName>
        <description>i_pos_tender_seq_id</description>
        <externalDeveloperName>i_pos_tender_seq_id</externalDeveloperName>
        <label>i_pos_tender_seq_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_xref_dmid__c</fullName>
        <description>i_xref_dmid</description>
        <externalDeveloperName>i_xref_dmid</externalDeveloperName>
        <label>i_xref_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$pos_trans_tender</label>
    <pluralLabel>caesars$pos_trans_tender</pluralLabel>
</CustomObject>